--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "object-nest",
-  "version": "0.1.1",
+  "version": "0.1.2",
   "description": "Assign some property nestly",
   "main": "index.js",
   "scripts": {
@@ -22,5 +22,8 @@
   "homepage": "https://github.com/egoist/object-nest#readme",
   "devDependencies": {
     "ava": "^0.7.0"
+  },
+  "dependencies": {
+    "lodash.clone": "^3.0.3"
   }
 }
